Updated to component naming standard (makeAccordion etc.), added enable/disable/remove/changeAccordion; fixed outstanding bugs (pixel-flickering in IE/Opera); added option to customize navigation-filtering (navigationFilter, callback); fixed unaccordion (now removeAccordion) to properly cleanup everything (display, height), remove only namespaced events
git-svn-id: http://jqueryjs.googlecode.com/svn/trunk@4523 c715fcbe-d12f-0410-84c4-316a508785bb

--- a/plugins/accordion/demo/demo.css
+++ b/plugins/accordion/demo/demo.css
@@ -36,12 +36,9 @@ li { list-style-type: none; }
 #log { position:fixed; bottom: 0; right:1em; text-align:right; }
 #switch { position: fixed; bottom: 0; right: 15em; }
 
-
 .basic  {
 	width: 260px;
 	font-family: verdana;
-	margin:  0px;
-	padding: 0px;
 	border: 1px solid black;
 }
 .basic div {
@@ -68,6 +65,8 @@ li { list-style-type: none; }
 	color: black;
 	background-color: #00a0c6;
 	border-top: 1px solid #FFFFFF;
+	border-bottom: 1px solid #999;
+	
 	background-image: url("AccordionTab0.gif");
 }
 .basic a:hover {
@@ -77,7 +76,6 @@ li { list-style-type: none; }
 .basic a.selected {
 	color: black;
 	background-color: #80cfe2;
-	border-bottom: 1px solid black;
 	background-image: url("AccordionTab2.gif");
 }
 
